fix: display of TitleForm.tsx component on tablet, mobile screens

--- a/src/app/assets/styles/_media.scss
+++ b/src/app/assets/styles/_media.scss
@@ -48,15 +48,19 @@
     .page__header {
         margin: 0 0 15px 0;
     }
-    .page__title {
-        max-width: calc(100vw - 400px);
-    }
     .page__content {
         padding: 15px 35px 15px 35px;
         position: static;
     }
-    .page__title {
-        text-align: center;
+    // .page__title { err title
+    //     text-align: center;
+    // }
+    .page__button--edit {
+        left: 0;
+    }
+    .title__input {
+        max-width: calc(100vw - 360px);
+        margin: 0 0 0 25px;
     }
     .todo {
         height: calc(100vh - 260px);
@@ -79,8 +83,11 @@
             margin: 0 0 10px 0;
         }
     }
-    .page__title {
-        max-width: 100%;
+    .title__input {
+        max-width: calc(100vw - 140px);
+    }
+    .page__button--edit {
+        top: -2.5rem;
     }
     .form {
         width: 100%;
@@ -124,6 +131,9 @@
     }
     .page__nav-select {
         padding: 12px 45px 0 20px;
+    }
+    .title__input {
+        max-width: calc(100vw - 110px);
     }
     .todo__label-text {
         max-width: calc(100vw - 110px);
