--- a/src/app/components/TitleForm/titleForm.scss
+++ b/src/app/components/TitleForm/titleForm.scss
@@ -15,12 +15,17 @@
         cursor: default;
         // hide text
         @include sliceText;
-        max-width: calc(100vw - 680px);
+        max-width: calc(100vw - 685px);
         width: 100%;
     }
     &__input.editable {
         color: #888;
         text-decoration: underline;
         pointer-events: all;
+    }
+    &__input.general {
+        margin: 0;
+         // disable copy
+         @include disableCopy;
     }
 }
